Antlr/noresParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.11.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from nores.g4 by ANTLR 4.11.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.11.1")]
[System.CLSCompliant(false)]
public partial class noresParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, COMMENT=16, 
		WS=17, NEWLINE=18, TAB=19, INT=20, GOTO=21, GO=22, TO=23, CALL=24, PROCEDURE=25, 
		PROC=26, END=27, DECLARE=28, BINARY=29, DECIMAL=30, AUTOMATIC=31, BUILTIN=32, 
		STATIC=33, VARIABLE=34, BASED=35, DEFINED=36, INTERNAL=37, EXTERNAL=38, 
		RETURN=39, IF=40, THEN=41, IDENTIFIER=42, ARROW=43, DOT=44, COMMA=45, 
		LPAR=46, RPAR=47, EQUALS=48, TIMES=49, DIVIDE=50, PLUS=51, MINUS=52, SEMICOLON=53, 
		POWER=54;
	public const int
		RULE_prog = 0, RULE_statement = 1, RULE_preprocessor_stmt = 2, RULE_assign_stmt = 3, 
		RULE_reference = 4, RULE_arguments = 5, RULE_arguments_list = 6, RULE_basic_reference = 7, 
		RULE_structure_qualification = 8, RULE_structure_qualification_list = 9, 
		RULE_subscript = 10, RULE_subscript_commalist = 11, RULE_expression = 12, 
		RULE_expression_9 = 13, RULE_expression_8 = 14, RULE_expression_7 = 15, 
		RULE_expression_6 = 16, RULE_expression_5 = 17, RULE_expression_4 = 18, 
		RULE_expression_3 = 19, RULE_expression_2 = 20, RULE_expression_1 = 21, 
		RULE_prefix_expression = 22, RULE_parenthesized_expression = 23, RULE_primitive_expression = 24, 
		RULE_constant = 25, RULE_prefix_operator = 26, RULE_comparison_operator = 27, 
		RULE_identifier = 28, RULE_keyword = 29, RULE_keyword_stmt = 30, RULE_call_stmt = 31, 
		RULE_goto_stmt = 32, RULE_end_stmt = 33, RULE_declare_stmt = 34, RULE_attribute = 35, 
		RULE_data_attribute = 36, RULE_based = 37, RULE_defined = 38, RULE_procedure_stmt = 39, 
		RULE_return_stmt = 40, RULE_if_stmt = 41, RULE_then_clause = 42;
	public static readonly string[] ruleNames = {
		"prog", "statement", "preprocessor_stmt", "assign_stmt", "reference", 
		"arguments", "arguments_list", "basic_reference", "structure_qualification", 
		"structure_qualification_list", "subscript", "subscript_commalist", "expression", 
		"expression_9", "expression_8", "expression_7", "expression_6", "expression_5", 
		"expression_4", "expression_3", "expression_2", "expression_1", "prefix_expression", 
		"parenthesized_expression", "primitive_expression", "constant", "prefix_operator", 
		"comparison_operator", "identifier", "keyword", "keyword_stmt", "call_stmt", 
		"goto_stmt", "end_stmt", "declare_stmt", "attribute", "data_attribute", 
		"based", "defined", "procedure_stmt", "return_stmt", "if_stmt", "then_clause"
	};

	private static readonly string[] _LiteralNames = {
		null, "'%'", "'include'", "'|:'", "'&:'", "'|'", "'~'", "'&'", "'||'", 
		"'>'", "'>='", "'<'", "'<='", "'~>'", "'~='", "'~<'", null, null, null, 
		null, null, null, null, null, null, null, "'proc'", "'end'", null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "'->'", "'.'", "','", "'('", "')'", "'='", "'*'", "'/'", "'+'", 
		"'-'", "';'", "'**'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "COMMENT", "WS", "NEWLINE", "TAB", "INT", "GOTO", 
		"GO", "TO", "CALL", "PROCEDURE", "PROC", "END", "DECLARE", "BINARY", "DECIMAL", 
		"AUTOMATIC", "BUILTIN", "STATIC", "VARIABLE", "BASED", "DEFINED", "INTERNAL", 
		"EXTERNAL", "RETURN", "IF", "THEN", "IDENTIFIER", "ARROW", "DOT", "COMMA", 
		"LPAR", "RPAR", "EQUALS", "TIMES", "DIVIDE", "PLUS", "MINUS", "SEMICOLON", 
		"POWER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "nores.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static noresParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public noresParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public noresParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			InoresListener typedListener = listener as InoresListener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			InoresListener typedListener = listener as InoresListener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 89;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 86;
					statement();
					}
					} 
				}
				State = 91;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Preprocessor_stmtContext preprocessor_stmt() {
			return GetRuleContext<Preprocessor_stmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Assign_stmtContext assign_stmt() {
			return GetRuleContext<Assign_stmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Keyword_stmtContext keyword_stmt() {
			return GetRuleContext<Keyword_stmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(noresParser.SEMICOLON, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			InoresListener typedListener = listener as InoresListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			InoresListener typedListener = listener as InoresListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			State = 96;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 92;
				preprocessor_stmt();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 93;
				assign_stmt();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 94;
				keyword_stmt();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 95;
				Match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Preprocessor_stmtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(noresParser.SEMICOLON, 0); }
		public Preprocessor_stmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_preprocessor_stmt; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			InoresListener typedListener = listener as InoresListener;
			if (typedListener != null) typedListener.EnterPreprocessor_stmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			InoresListener typedListener = listener as InoresListener;
			if (typedListener != null) typedListener.ExitPreprocessor_stmt(this);
		}
	}

	[RuleVersion(0)]
	public Preprocessor_stmtContext preprocessor_stmt() {
		Preprocessor_stmtContext _localctx = new Preprocessor_stmtContext(Context, State);
		EnterRule(_localctx, 4, RULE_preprocessor_stmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98;
			Match(T__0);
			State = 99;
			Match(T__1);
			State = 100;
			identifier();
			State = 101;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Assign_stmtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ReferenceContext reference() {
			return GetRuleContext<ReferenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(noresParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(noresParser.SEMICOLON, 0); }
		public Assign_stmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assign_stmt; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			InoresListener typedListener = listener as InoresListener;
			if (typedListener != null) typedListener.EnterAssign_stmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			InoresListener typedListener = listener as InoresListener;
			if (typedListener != null) typedListener.ExitAssign_stmt(this);
		}
	}

	[RuleVersion(0)]
	public Assign_stmtContext assign_stmt() {
		Assign_stmtContext _localctx = new Assign_stmtContext(Context, State);
		EnterRule(_localctx, 6, RULE_assign_stmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103;
			reference(0);
			State = 104;
			Match(EQUALS);
			State = 105;
			expression(0);
			State = 106;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReferenceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Basic_referenceContext basic_reference() {
			return GetRuleContext<Basic_referenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Arguments_listContext arguments_list() {
			return GetRuleContext<Arguments_listContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ReferenceContext reference() {
			return GetRuleContext<ReferenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ARROW() { return GetToken(noresParser.ARROW, 0); }
		public ReferenceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_reference; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			InoresListener typedListener = listener as InoresListener;
			if (typedListener != null) typedListener.EnterReference(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			InoresListener typedListener = listener as InoresListener;
			if (typedListener != null) typedListener.ExitReference(this);
		}
	}

	[RuleVersion(0)]
	public ReferenceContext reference() {
		return reference(0);
	}

	private ReferenceContext reference(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ReferenceContext _localctx = new ReferenceContext(Context, _parentState);
		ReferenceContext _prevctx = _localctx;
		int _startState = 8;
		EnterRecursionRule(_localctx, 8, RULE_reference, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 109;
			basic_reference();
			State = 111;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				{
				State = 110;
				arguments_list();
				}
				break;
			}
			}
			Context.Stop = TokenStream.LT(-1);
			State = 121;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ReferenceContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_reference);
					State = 113;
					if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
					State = 114;
					Match(ARROW);
					State = 115;
					basic_reference();
					State = 117;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
					case 1:
						{
						State = 116;
						arguments_list();
						}
						break;
					}
					}
					} 
				}
				State = 123;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class ArgumentsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAR() { return GetToken(noresParser.LPAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAR() { return GetToken(noresParser.RPAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Subscript_commalistContext subscript_commalist() {
			return GetRuleContext<Subscript_commalistContext>(0);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arguments; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			InoresListener typedListener = listener as InoresListener;
			if (typedListener != null) typedListener.EnterArguments(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			InoresListener typedListener = listener as InoresListener;
			if (typedListener != null) typedListener.ExitArguments(this);
		}
	}

	[RuleVersion(0)]
	public ArgumentsContext arguments() {
		ArgumentsContext _localctx = new ArgumentsContext(Context, State);
		EnterRule(_localctx, 10, RULE_arguments);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124;
			Match(LPAR);
			State = 126;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (((_la) & ~0x3f) == 0 && ((1L << _la) & 6834015058264128L) != 0) {
				{
				State = 125;
				subscript_commalist();
				}
			}

			State = 128;
			Match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Arguments_listContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ArgumentsContext[] arguments() {
			return GetRuleContexts<ArgumentsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArgumentsContext arguments(int i) {
			return GetRuleContext<ArgumentsContext>(i);
		}
		public Arguments_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arguments_list; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			InoresListener typedListener = listener as InoresListener;
			if (typedListener != null) typedListener.EnterArguments_list(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			InoresListener typedListener = listener as InoresListener;
			if (typedListener != null) typedListener.ExitArguments_list(this);
		}
	}

	[RuleVersion(0)]
	public Arguments_listContext arguments_list() {
		Arguments_listContext _localctx = new Arguments_listContext(Context, State);
		EnterRule(_localctx, 12, RULE_arguments_list);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 131;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 130;
					arguments();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 133;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Basic_referenceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Structure_qualification_listContext structure_qualification_list() {
			return GetRuleContext<Structure_qualification_listContext>(0);
		}
		public Basic_referenceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_basic_reference; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			InoresListener typedListener = listener as InoresListener;
			if (typedListener != null) typedListener.EnterBasic_reference(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			InoresListener typedListener = listener as InoresListener;
			if (typedListener != null) typedListener.ExitBasic_reference(this);
		}
	}

	[RuleVersion(0)]
	public Basic_referenceContext basic_reference() {
		Basic_referenceContext _localctx = new Basic_referenceContext(Context, State);
		EnterRule(_localctx, 14, RULE_basic_reference);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 136;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				{
				State = 135;
				structure_qualification_list();
				}
				break;
			}
			State = 138;
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Structure_qualificationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT() { return GetToken(noresParser.DOT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ArgumentsContext arguments() {
			return GetRuleContext<ArgumentsContext>(0);
		}
		public Structure_qualificationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_structure_qualification; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			InoresListener typedListener = listener as InoresListener;
			if (typedListener != null) typedListener.EnterStructure_qualification(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			InoresListener typedListener = listener as InoresListener;
			if (typedListener != null) typedListener.ExitStructure_qualification(this);
		}
	}

	[RuleVersion(0)]
	public Structure_qualificationContext structure_qualification() {
		Structure_qualificationContext _localctx = new Structure_qualificationContext(Context, State);
		EnterRule(_localctx, 16, RULE_structure_qualification);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 140;
			identifier();
			State = 142;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LPAR) {
				{
				State = 141;
				arguments();
				}
			}

			State = 144;
			Match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Structure_qualification_listContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Structure_qualificationContext[] structure_qualification() {
			return GetRuleContexts<Structure_qualificationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Structure_qualificationContext structure_qualification(int i) {
			return GetRuleContext<Structure_qualificationContext>(i);
		}
		public Structure_qualification_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_structure_qualification_list; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			InoresListener typedListener = listener as InoresListener;
			if (typedListener != null) typedListener.EnterStructure_qualification_list(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			InoresListener typedListener = listener as InoresListener;
			if (typedListener != null) typedListener.ExitStructure_qualification_list(this);
		}
	}

	[RuleVersion(0)]
	public Structure_qualification_listContext structure_qualification_list() {
		Structure_qualification_listContext _localctx = new Structure_qualification_listContext(Context, State);
		EnterRule(_localctx, 18, RULE_structure_qualification_list);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 147;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 146;
					structure_qualification();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 149;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SubscriptContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public SubscriptContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_subscript; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			InoresListener typedListener = listener as InoresListener;
			if (typedListener != null) typedListener.EnterSubscript(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			InoresListener typedListener = listener as InoresListener;
			if (typedListener != null) typedListener.ExitSubscript(this);
		}
	}
